@@ -34,6 +34,7 @@ public:
     int Execute(const wxString &query, int resultToDisplay=0); // > 0: resultset to display, <=0: last result
     long NumRows() const;
     long InsertedCount() const;
+    OID  InsertedOid() const;
 
     int Retrieve(long chunk=-1);
     int RetrieveOne();
