@@ -7,14 +7,17 @@
     <li>AHP - Adam H. Pendleton
     <li>MP  - Marc Persuy
 </ul>
-<b>Versions and releases</b>
+<b>Versions and releases</b><br>
 The following list contains all changes to pgAdmin3, as present in cvs. 
 <ul>
 <li>A version number denotes the release version, which contains the patch or feature mentioned.
 <li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
 <li>Unmarked fixes are experimental and are contained in snapshots only.
 </ul>
+<br>
 <ul>
+    <li>2003-12-08 AP        Query tool: display of inserted OIDs
+    <li>2003-12-08 AP        pgAgent schema, changed system schema discovery
     <li>2003-12-05 AP   ***  allow all 'p' types except any,trigger,language_handler as return types for functions
     <li>2003-12-03 AP   ***  fix connect to MULE_INTERNAL db
     <li>2003-12-02 AP   ***  fix acl property display
